fix bug of navi.html path

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<div id="left">
-			<iframe name="navinfo" src="navi.html" ></iframe>
+			<iframe name="navinfo" src="output/navi.html" ></iframe>
 		</div>
 		<div id="right">
 			<iframe name="bodyinfo" src="190802-test.html"></iframe>
