--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <html>
 	<head>
+		<script type="text/javascript">
+			function toggle() {
+				var aside = document.getElementById("navi")
+				if (aside.offsetLeft == 0) {
+					aside.setAttribute("class", "close")
+				} else {
+					aside.setAttribute("class", "open")
+				}
+			}
+		</script>
 		<link href="style.css" rel="stylesheet" type="text/css" />
 		<meta http-equiv="content-type" content="text/html;charset=utf-8">
 	</head>
 	<body>
-		<div id="left">
+		<aside class="box" id="navi">
+			<button onclick="toggle()">三</button>
 			<iframe name="navinfo" src="output/navi.html" ></iframe>
-		</div>
+		</aside>
 		<div id="right">
 			<iframe name="bodyinfo" src="190802-test.html"></iframe>
 		</div>
