--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	</head>
 	<body>
 		<aside class="box" id="navi">
-			<span id="btn" draggable="true" onclick="toggle()"></span>
+			<span id="btn" draggable="true" onclick="toggle()">|</span>
 			<iframe name="navinfo" src="output/navi.html" ></iframe>
 		</aside>
-		<div id="right">
-			<iframe name="bodyinfo" src="190802-test.html"></iframe>
+		<div id="pandoc">
+			<iframe name="bodyinfo" src="output/190802-test.html"></iframe>
 		</div>
 	</body>
 </html>
