--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<aside class="box" id="navi">
-			<span id="btn" draggable="true" onclick="toggle()">|</span>
+			<span id="btn" onclick="toggle()">|</span>
 			<iframe name="navinfo" src="output/navi.html" ></iframe>
 		</aside>
 		<div id="pandoc">
